--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/node"
+      "src": "next.config.js",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/" }
-  ],
-  "build": {
-    "env": {
-      "DATABASE_URL": "@DATABASE_URL",
-      "OPENAI_API_KEY": "@OPENAI_API_KEY",
-      "NEXTAUTH_URL": "@NEXTAUTH_URL",
-      "NEXTAUTH_SECRET": "@NEXTAUTH_SECRET"
-    },
-    "commands": {
-      "install": "npm install --legacy-peer-deps",
-      "build": "npx prisma generate && next build"
-    }
-  }
+  ]
 }
