--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
+    "@react-google-maps/api": "^2.20.7",
     "framer-motion": "^12.23.12",
+    "libphonenumber-js": "^1.12.14",
     "lucide-react": "^0.541.0",
-    "next": "14.2.3",
+    "next": "^15.5.0",
     "next-auth": "^4.24.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.25.0"
   },
   "devDependencies": {
