Fix vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
+    { "src": "next.config.js", "use": "@vercel/next" }
   ],
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 60
-    },
-    "api/**/*.ts": {
-      "maxDuration": 60
-    }
-  },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
